fix line break in icons scss

--- a/src/Shared/Assets/scss/_lts-icons.scss
+++ b/src/Shared/Assets/scss/_lts-icons.scss
@@ -126,19 +126,16 @@
 }
 .lts-issued-loans {
   &:before {
-    content: '\e915
-    '; 
+    content: '\e915'; 
   }
 }
 .lts-cib {
   &:before {
-    content: '\e916
-    '; 
+    content: '\e916'; 
   }
 }
 .lts-change-source-of-fund {
   &:before {
-    content: '\e917
-    '; 
+    content: '\e917'; 
   }
 }
